Fix some minor CSS issues with the expressions widget.
Summary:
Added a bit of vertical space between input and preview.
Made it so that only the MathJax will scroll if it overflows horizontally.
Made sure that error buddy + message fit within narrowest layout.
Set up testrender.html for testing in IE8 (using es5-shim.js).
Shrunk the error-buddy png to the size we use (from @2x).

Test Plan: Play around with the expression widget on testrender.html

Reviewers: alpert

Reviewed By: alpert

Differential Revision: http://phabricator.khanacademy.org/D2949

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -101,6 +101,11 @@
     -webkit-box-sizing: border-box;
     max-width: 240px;
     width: 100%;
+    margin-bottom: 5px;
+}
+
+.perseus-widget-expression > .output > .mathjax {
+    overflow-x: auto;
 }
 
 .perseus-widget-expression > .output > .placeholder {
@@ -119,11 +124,11 @@
     color: #000;
     display: none;
     font-weight: normal;
-    min-height: 24px;
-    width: 175px;
+    min-height: 22px;
+    width: 168px;
     position: absolute;
     top: 0px;
-    left: 45px;
+    left: 40px;
     margin: auto;
 }
 
@@ -134,13 +139,13 @@
     width: 40px;
     position: absolute;
     top: -3px;
-    left: -46px;
+    left: -42px;
 }
 
 .perseus-widget-expression > .output > .placeholder > .error > .message {
     font: 12px @baseFontFamily;
     line-height: 1.4em;
-    margin: 5px 8px;
+    margin: 0px 4px;
 }
 
 //
